spacing issues

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -71,6 +71,7 @@ body {
 .left {
   float: left;
   width: 350px;
+  margin-left: 3.5%;
 
 //large dog image
   .dog {
@@ -119,7 +120,7 @@ body {
 .right {
   float: right;
   width: 350px;
-  height: 500px;
+  margin-left: 1%;
 
 //large cat image
   .cat {
